ui fixes for alignment issues on the category page

--- a/style.css
+++ b/style.css
@@ -513,10 +513,12 @@ input[class=email-submit] {
 }
 
 .category-heading h1 {
-    font-family: 'Roboto', sans-serif;
     letter-spacing: -1px;
     font-size: 28px;
     font-weight: 300;
+    text-align: left;
+    font-weight: 300;
+    padding-bottom: 14px;
 }
 
 .category-recommend {
@@ -534,7 +536,8 @@ input[class=email-submit] {
 
 .category-subscribe {
     text-align: center;
-    margin-top: 20%;
+    margin-top: 14%;
+    padding-bottom: 10%;
 }
 
 .category-submit-btn {
@@ -900,15 +903,6 @@ input[class=email-submit] {
 
 .category-heading {
     margin-top: 10%;
-}
-
-.category-heading h1 {
-    font-size: medium;
-    letter-spacing: 0px;
-    max-width: 90%;
-    text-align: left;
-    font-weight: 300;
-    padding-bottom: 14px;
 }
 
 .category-header-sec {
